# service/apisvr/internal/handler/routes.go
@@ -1042,6 +1042,11 @@ func RegisterHandlers(server *rest.Server, serverCtx *svc.ServiceContext) {
 					Path:    "/multi-update",
 					Handler: systemtenantnotifytemplate.MultiUpdateHandler(serverCtx),
 				},
+				{
+					Method:  http.MethodPost,
+					Path:    "/update",
+					Handler: systemtenantnotifytemplate.UpdateHandler(serverCtx),
+				},
 			}...,
 		),
 		rest.WithPrefix("/api/v1/system/tenant/notify/template"),
