# service/apisvr/internal/handler/system/tenant/notify/template/updateHandler.go
@@ -1,0 +1,25 @@
+package template
+
+import (
+	"gitee.com/i-Things/core/service/apisvr/internal/logic/system/tenant/notify/template"
+	"gitee.com/i-Things/core/service/apisvr/internal/svc"
+	"gitee.com/i-Things/core/service/apisvr/internal/types"
+	"gitee.com/i-Things/share/errors"
+	"gitee.com/i-Things/share/result"
+	"github.com/zeromicro/go-zero/rest/httpx"
+	"net/http"
+)
+
+func UpdateHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.TenantNotifyTemplate
+		if err := httpx.Parse(r, &req); err != nil {
+			result.Http(w, r, nil, errors.Parameter.WithMsg("入参不正确:"+err.Error()))
+			return
+		}
+
+		l := template.NewUpdateLogic(r.Context(), svcCtx)
+		err := l.Update(&req)
+		result.Http(w, r, nil, err)
+	}
+}
